force-app/main/default/objects/Spreadsheet_Configuration__c/Spreadsheet_Configuration__c.object-meta.xml
<CustomObject>
    <description>Spreadsheet Configuration</description>
    <label>Spreadsheet Template</label>
    <nameField>
        <label>Spreadsheet Template Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spreadsheet Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>