force-app/main/default/objects/Spreadsheet_Configuration__c/fields/Column_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Column_Metadata__c</fullName>
    <description>Column Metadata</description>
    <inlineHelpText>Column Metadata</inlineHelpText>
    <label>Column Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>