force-app/main/default/objects/Spreadsheet_Configuration__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>