force-app/main/default/objects/Spreadsheet_Configuration__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object API Name for which the spreadsheet configuration is build</description>
    <inlineHelpText>Object API Name for which the spreadsheet configuration is build</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>