force-app/main/default/objects/Spreadsheet_Configuration__c/fields/Row_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Row_Metadata__c</fullName>
    <description>Row Metadata</description>
    <inlineHelpText>Row Metadata</inlineHelpText>
    <label>Row Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>